kubernetes/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: employee-app
  namespace: dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: employee-app

  template:

    metadata:
      labels:
        app: employee-app

    spec:

      containers:

      - name: employee-app

        image: raviteja21k/employee-service:15

        ports:
        - containerPort: 8000

        livenessProbe:
          httpGet:
            path: /health
            port: 8000

          initialDelaySeconds: 20

        readinessProbe:
          httpGet:
            path: /health
            port: 8000

          initialDelaySeconds: 10

        resources:

          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "250m"
            memory: "256Mi"
