kubernetes/dev/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-service
  namespace: dev

spec:
  selector:
    app: employee-app

  ports:
    - port: 8000
      targetPort: 8000

type: NodePort
