kubernetes/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-ingress
  namespace: dev

spec:
  ingressClassName: nginx

  rules:
  - host: dev.shivalayammtp.club

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: employee-service

            port:
              number: 8000
